Fixed blank spacing

--- a/TW/MI4/ex_mi_tabel_lista.css
+++ b/TW/MI4/ex_mi_tabel_lista.css
@@ -1,3 +1,7 @@
+table thead tr::before {
+    content: ""
+}
+
 table tbody tr::before {
     content: "•"
 }
